OO-5485: add REST endpoint to configure report in test course element